--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-lottie": "^1.2.4",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
@@ -46,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-lottie": "^1.2.10",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4"
