--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,6 +46,9 @@ jobs:
             - name: Install dependencies
               run: npm install
 
+            - name: Install @semantic-release/gitmoji
+              run: npm install --save-dev @semantic-release/gitmoji
+
             - name: Configure Git User
               run: |
                   git config --global user.name "github-actions[bot]"
