👷 fix gitmoji install

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,7 +47,7 @@ jobs:
               run: npm install
 
             - name: Install @semantic-release/gitmoji
-              run: npm install --save-dev @semantic-release/gitmoji
+              run: npm install --save-dev semantic-release-gitmoji
 
             - name: Configure Git User
               run: |
