--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,6 +8,10 @@ on:
         branches:
             - main
 
+permissions:
+    contents: write
+    issues: write
+
 jobs:
     build:
         name: Build Application
