--- a/.releaserc.json
+++ b/.releaserc.json
@@ -10,8 +10,7 @@
                     ":sparkles:": "minor",
                     ":bug:": "patch"
                 },
-                "releaseNotes": true,
-                "semver": true
+                "releaseNotes": true
             }
         ],
         "@semantic-release/github",
