--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -50,6 +50,9 @@ jobs:
             - name: Install dependencies
               run: npm install
 
+            - name: Install plugins
+              run: npm install --save-dev semantic-release-gitmoji@latest
+
             - name: Configure Git User
               run: |
                   git config --global user.name "github-actions[bot]"
