--- a/.releaserc.json
+++ b/.releaserc.json
@@ -17,7 +17,8 @@
             "@semantic-release/git",
             {
                 "assets": ["package.json", "package-lock.json", "CHANGELOG.md"],
-                "message": ":bookmark: Release ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+                "message": ":bookmark: Release ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}",
+                "allowEmptyCommit": false
             }
         ]
     ]
